--- a/tpn-banker-client/package.json
+++ b/tpn-banker-client/package.json
@@ -17,6 +17,7 @@
     "@primeuix/themes": "^1.2.5",
     "@primevue/themes": "^4.4.1",
     "pinia": "^3.0.3",
+    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
     "vue": "^3.5.22",
