--- a/tpn-banker-client/package.json
+++ b/tpn-banker-client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@primeuix/themes": "^1.2.5",
     "@primevue/themes": "^4.4.1",
+    "axios": "^1.13.2",
     "pinia": "^3.0.3",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
